--- a/css/stylesautos.css
+++ b/css/stylesautos.css
@@ -60,7 +60,6 @@ position: relative;
 }
 
 .Menu a:hover {
-    
     padding-left: 30px;    
     z-index: 2;
 }
@@ -71,16 +70,7 @@ position: relative;
     display: contents;
     box-sizing: border-box;
     bottom: 10rem;
- 
-   
-    
-
 }
-
-.nav-link:hover {
-    color: azure;
-}
-
 
 
 .barra {
@@ -100,7 +90,7 @@ position: relative;
 
 .icono {
     color: rgb(84, 84, 84);
-    z-index: 3;
+    z-index: 2;
 }
 
 input {
@@ -129,18 +119,20 @@ button {
     border-radius: 0 5px 5px 0;
     color: rgb(51, 50, 49);;
     cursor: pointer; 
+    
+    
 
     
 }
 
 button:hover {
-    background-color: rgb(206, 107, 191);
+    background-color: rgb(238, 209, 234);
     padding-left: 30px;    
     z-index: 2;
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
 
     header {
     position: relative;
@@ -263,7 +255,7 @@ z-index: 3;
                                              
 }
 
-@media only screen and (max-width: 768px) {.products .box-container .box {grid-template-columns:repeat(2, 1fr);}
+@media only screen and (max-width: 600px) {.products .box-container .box {grid-template-columns:repeat(2, 1fr);}
                                             
 }
 
@@ -384,5 +376,5 @@ z-index: 3;
 }
 
 .container a:hover {
-    color: #eca02f;
+    color: #f004b5;
 }
