--- a/css/stylesautos.css
+++ b/css/stylesautos.css
@@ -1,4 +1,4 @@
-* {
+body {
     background-image: url(file:///C:/Users/Usuario/Documents/GitHub/Proyecto-Final-JAP-Grupo2/img/Dise%C3%B1o%20sin%20t%C3%ADtulo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -8,21 +8,21 @@
 }
 
 header {
-    background-color:  rgba(250, 165, 204, 0.767);
+    
     position: relative;
     top: 0;
     left: 0;
     right: 0;
-    padding: 2rem 9%;
+    padding: 3rem 9%;
     display: flex;
     
 
-    z-index: 1;
+   
 }
 
 header .logo {
     position: absolute;
-    top: 0;
+    top: 2.4rem;
     left: 0;
     
 }
@@ -37,7 +37,7 @@ header img {
    position: absolute;
     top: 0;
     right: 0; 
-    width: 80%;  
+    width: 100%;  
     height: 2.5rem;
     margin: 0px 0px;
     border-radius: 10px;
@@ -75,14 +75,13 @@ position: relative;
 
 .barra {
     background-color: #E8E8E8;
-    background-image: url(file:///C:/Users/Usuario/Documents/GitHub/Proyecto-Final-JAP-Grupo2/img/Dise%C3%B1o%20sin%20t%C3%ADtulo3.jpg);
     display: flex;
     justify-content: center;
     align-items:center;
     position: relative;
     margin-top: 2rem;
     left: 65%;
-    border: 0.5rem solid #e1d9d9;
+    border: 0.5rem solid #E8E8E8;
     border-radius: 10px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
     width: 45%;    
@@ -101,8 +100,7 @@ input {
     outline: none;
     font-size: 1rem;
     background-color: #E8E8E8;
-    background-image: url(file:///C:/Users/Usuario/Documents/GitHub/Proyecto-Final-JAP-Grupo2/img/Dise%C3%B1o%20sin%20t%C3%ADtulo3.jpg);
-    
+   
     
 
 }
@@ -126,10 +124,13 @@ button {
 }
 
 button:hover {
-    background-color: rgb(238, 209, 234);
+    background-color: #f485dc;
     padding-left: 30px;    
-    z-index: 2;
+    
 }
+
+
+
 
 
 @media (max-width: 600px) {
@@ -244,10 +245,9 @@ z-index: 3;
     border-radius: 0.5rem; 
     border: 0.5rem solid transparent; 
     transform: translate(3%, -3%);
+    width: 100%;
+    
 
-    background-image: url(file:///C:/Users/Usuario/Documents/GitHub/Proyecto-Final-JAP-Grupo2/img/Dise%C3%B1o%20sin%20t%C3%ADtulo.jpg);
-    background-size: cover;
-    background: no-repeat;
 }
     
 
@@ -261,8 +261,8 @@ z-index: 3;
 
 .products .box-container .box .image {
 
-    background-image: url(file:///C:/Users/Usuario/Documents/GitHub/Proyecto-Final-JAP-Grupo2/img/Dise%C3%B1o%20sin%20t%C3%ADtulo%202.jpg); 
-    background: color(rgb(202, 89, 161));
+    
+    background-color: rgb(202, 89, 161); 
     background-repeat: no-repeat;
     background-size: cover;
     
@@ -298,12 +298,9 @@ z-index: 3;
     font-weight: bolder;
     text-align: left;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: rgb(98, 19, 87);
+    color: rgb(255, 255, 255);
 
-    background-image: url(file:///C:/Users/Usuario/Documents/GitHub/Proyecto-Final-JAP-Grupo2/img/Dise%C3%B1o%20sin%20t%C3%ADtulo%202.jpg); 
-    background-repeat: no-repeat;
-    background-size: cover;
-    z-index: 2;
+    
 }
 
 .products .box-container .box .image p2 {
@@ -313,13 +310,12 @@ z-index: 3;
     font-weight:bold;
     margin-top: -20px;
     font-size: 0.8rem;
-    color: rgb(61, 57, 57);
+     color: rgb(254, 222, 238);
     padding: 0.4rem;
     
     
 
-    background-image: url(file:///C:/Users/Usuario/Documents/GitHub/Proyecto-Final-JAP-Grupo2/img/Dise%C3%B1o%20sin%20t%C3%ADtulo%202.jpg); 
-    background-repeat: no-repeat;  
+    
 }
 
 .products .box-container .box .image .price { 
@@ -330,11 +326,8 @@ z-index: 3;
     text-align: left;
     padding: 0.5rem;
     margin-top: -30px;
-
-    background-image: url(file:///C:/Users/Usuario/Documents/GitHub/Proyecto-Final-JAP-Grupo2/img/Dise%C3%B1o%20sin%20t%C3%ADtulo%202.jpg); 
-    background-repeat: no-repeat;
-    background-size: cover; 
-    z-index: 2;
+     color: rgb(254, 222, 238);
+    
 }
 
  .products .box-container .box .image .price .precio {
@@ -343,13 +336,10 @@ z-index: 3;
     font-weight: bolder;
     text-align: left;
     position: relative;
-    z-index: 3;
+    color: rgb(255, 255, 255);
     
 
-    background-image: url(file:///C:/Users/Usuario/Documents/GitHub/Proyecto-Final-JAP-Grupo2/img/Dise%C3%B1o%20sin%20t%C3%ADtulo%202.jpg); 
-    background-repeat: no-repeat;
-    background-size: cover; 
-    z-index: 3;
+   
 }
 
 
@@ -361,13 +351,10 @@ z-index: 3;
     font-size: 0.8rem;
     font-weight: lighter;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: rgb(98, 19, 87);
+    color: rgb(254, 222, 238);
     padding: 0.3rem;
     
-    background-image: url(file:///C:/Users/Usuario/Documents/GitHub/Proyecto-Final-JAP-Grupo2/img/Dise%C3%B1o%20sin%20t%C3%ADtulo%202.jpg); 
-    background-repeat: no-repeat;
-    background-size: cover; 
-    z-index: 2;
+    
 }
 
 .container a {
