--- a/css/stylesautos.css
+++ b/css/stylesautos.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(file:///C:/Users/Usuario/Documents/GitHub/Proyecto-Final-JAP-Grupo2/img/Dise%C3%B1o%20sin%20t%C3%ADtulo.jpg);
+    background-image: url(img\1Background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
