--- a/css/stylesautos.css
+++ b/css/stylesautos.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(img\1Background.jpg);
+    background-image: url(/img/1Background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
