--- a/css/stylesautos.css
+++ b/css/stylesautos.css
@@ -4,7 +4,6 @@
     --color-fondo: rgb(255, 221, 210)!important;
     --color-contraste: rgb(246, 246, 246)!important;
     --color-boton: rgb(255, 141, 199)!important;
-    ;
   }
 
  .col .card, .shadow, .rounded, .h-100{
@@ -155,7 +154,7 @@ button:hover {
 
 
 
-@media (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
     header {
     position: relative;
