--- a/css/stylesautos.css
+++ b/css/stylesautos.css
@@ -101,11 +101,12 @@ position: relative;
     align-items:center;
     position: relative;
     margin-top: 2rem;
-    left: 65%;
+    left: 75%;
     border: 0.5rem solid #E8E8E8;
     border-radius: 10px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
-    width: 45%;    
+
+       
 }
 
 .icono {
@@ -170,21 +171,24 @@ button:hover {
     }
 
     header .logo {
-    position: absolute;
-    top: 3rem;
-    left: 0;
+      display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     
 }
 
     header img {
     height: 13rem;
+    filter: brightness(0) invert(1) grayscale(1) contrast(100) drop-shadow(2px 2px 2px);
+    
+
     }
 
     .barra {
         position: relative;
         bottom: -90px;
-        left: -4%;
-        transform:translate(90px 4%);
+        left: 0%;
         width: 360px;
         border-radius: 20px;
     }
@@ -233,6 +237,30 @@ font-weight: bolder;
 position: relative;
 z-index: 3; 
 }
+    
+}
+
+@media only screen and (max-width: 360px) { 
+   header img { 
+    height: 50vw; 
+    
+}
+    header {
+        
+        padding-bottom: 5vh;
+    }
+    .barra { 
+        border-radius: 8px;
+        left: 0%;
+        margin-top: 15vh;
+        margin-bottom: 2px;
+       
+    }
+    .barra, .barra input {
+        bottom: auto;
+        width: 80vw;
+        
+    }
     
 }
 
