--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 .card-body,
 .container,
 .site-header {
-  font-family: 'Verdana', serif !important;
+  font-family: "Verdana", serif !important;
 }
 
 .jumbotron .display-4 {
@@ -32,8 +32,8 @@ nav a {
   height: 50vh;
   padding: 5em inherit;
   margin-bottom: 0;
-  background-color: #53C0FB;
-  background: url('../img/cover_back.png');
+  background-color: #53c0fb;
+  background: url("../img/cover_back.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -73,12 +73,12 @@ footer {
 }
 
 footer p {
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 
 .site-header a {
   color: white;
-  transition: ease-in-out color .15s;
+  transition: ease-in-out color 0.15s;
 }
 
 .site-header .dropdown-menu a {
@@ -86,7 +86,7 @@ footer p {
 }
 
 .dropzone {
-  border: 2px dashed #0087F7;
+  border: 2px dashed #0087f7;
   border-radius: 5px;
   background: white;
 }
@@ -188,20 +188,19 @@ a.custom-card:hover {
 .checked {
   color: orange;
 }
- .login-card {
-      background-color: rgba(255, 182, 193, 0.9); /* Rosa clarito */
-      border-radius: 15px;
-    }
+.login-card {
+  background-color: rgba(255, 182, 193, 0.9); /* Rosa clarito */
+  border-radius: 15px;
+}
 
-    /* Botón rosa intenso */
-    .btn-rosa {
-      background-color: #e75480; /* Rosa intenso */
-      color: white;
-      border: none;
-    }
+/* Botón rosa intenso */
+.btn-rosa {
+  background-color: #e75480; /* Rosa intenso */
+  color: white;
+  border: none;
+}
 
-    .btn-rosa:hover {
-      background-color: hsl(339, 67%, 52%); /* Más oscuro al pasar el mouse */
-      color: white;
-    }
- 
+.btn-rosa:hover {
+  background-color: hsl(339, 67%, 52%); /* Más oscuro al pasar el mouse */
+  color: white;
+}
