--- a/css/stylesautos.css
+++ b/css/stylesautos.css
@@ -101,7 +101,7 @@ input {
     
 }
 
-button:hover {
+.Boton:hover {
     background-color: #f485dc;
     padding-left: 30px;    
     
@@ -337,16 +337,15 @@ a:hover {
 
 
 .navbar-toggler-icon {
-    background-color: rgb(255, 199, 199);
+    background-color: rgb(116, 109, 109);
 }   
 
 .nav-item .nav-link {
-    color: rgb(135, 133, 162);
+    color: rgb(117, 113, 113); 
    
 }
 .nav-item:hover {
     background-color: rgb(248, 248, 248);  
-    z-index: 2;
 }
 
 
@@ -359,5 +358,6 @@ a:hover {
     border: none;
     padding: 10px 0;
     font-weight: bold;
+    
 }
 
