--- a/css/stylesautos.css
+++ b/css/stylesautos.css
@@ -32,23 +32,6 @@ header img {
 
 }
 
-.Menu {
-
-   position: absolute;
-    top: 0;
-    right: 0; 
-    width: 100%;  
-    height: 2.5rem;
-    margin: 0px 0px;
-    border-radius: 10px;
-    text-align: center;
-    border-right: 1px  transparent;
-    
-    box-shadow: 0 4px 4px 0 rgba(228, 18, 172, 0.2);  
-    overflow: hidden;
-
-}
-
 
 
 .barra {
@@ -57,7 +40,7 @@ header img {
     justify-content: center;
     align-items:center;
     position: relative;
-    margin-top: 2rem;
+    margin-top: 4rem;
     left: 65%;
     border: 0.5rem solid #E8E8E8;
     border-radius: 10px;
@@ -349,8 +332,6 @@ a:hover {
 }
 
 
-
-
 .dropdown-item {
     background-color: transparent;
     color: rgb(135, 133, 162);;
@@ -358,6 +339,22 @@ a:hover {
     border: none;
     padding: 10px 0;
     font-weight: bold;
+    display: block;
     
+}
+
+
+.dropdown-toggle {
+    font-weight: bold;
+    
+}
+
+.dropdown-menu {
+    display: none;
+    
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
 }
 
