--- a/css/stylesautos.css
+++ b/css/stylesautos.css
@@ -57,7 +57,7 @@ header .logo {
     position: absolute;
     top: 2.4rem;
     left: 0;
-    
+    margin-top: 2vh;
 }
 
 header img {
@@ -149,6 +149,7 @@ input {
     justify-content: center;
     align-items: center;
     width: 100%;
+    
     
 }
 
