--- a/css/stylesautos.css
+++ b/css/stylesautos.css
@@ -78,7 +78,7 @@ header img {
     right: 0%;
     border: 0.5rem solid #E8E8E8;
     border-radius: 10px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 4px 0 rgba(236, 233, 233, 0.2);
 
        
 }
@@ -96,10 +96,25 @@ input {
     outline: none;
     font-size: 1rem;
     background-color: #E8E8E8;
-   
+    border-radius: 5px; 
     
 
 }
+button {
+    background-color: rgb(167, 129, 201);
+     color: white;
+     border: none;
+     padding: 10px 28px; 
+    margin-bottom: 15px;
+    border-radius: 5px; 
+
+
+}
+button:hover {
+  background-color: hsl(294, 93%, 21%);
+  color: white;
+}
+
 
 .Boton { 
     background-color: #E8E8E8;;
