--- a/css/stylesautos.css
+++ b/css/stylesautos.css
@@ -1,11 +1,11 @@
-
+/*
   :root{
     --color-primario: rgb(255, 185, 185)!important;
     --color-fondo: rgb(167 129 201)!important;
     --color-contraste: rgb(246, 246, 246)!important;
     --color-boton: rgb(234 178 206)!important;
-  }
-
+  }*/
+@import url(colors.css);
   .card {
     cursor: pointer;
   }
@@ -101,8 +101,8 @@ input {
 
 }
 button {
-    background-color: rgb(167, 129, 201);
-     color: white;
+    background-color: light-dark(var(--light-btn),var(--dark-btn));
+     color: light-dark(var(--light-color),var(--dark-color));
      border: none;
      padding: 10px 28px; 
     margin-bottom: 15px;
