para q flor pinte si quiere

--- a/css/stylesautos.css
+++ b/css/stylesautos.css
@@ -6,23 +6,28 @@
     --color-boton: rgb(234 178 206)!important;
   }*/
 @import url(colors.css);
-  .card {
-    cursor: pointer;
-  }
 
- .col .card, .shadow, .rounded, .h-100{
-    
+.card {
+    cursor: pointer;
+}
+
+.col .card,
+.shadow,
+.rounded,
+.h-100 {
+
     background-color: var(--color-contraste);
     color: var(--color-fondo);
+
     & .card-footer {
-        background-color:  light-dark(var(--light-btn),var(--dark-btn));
-         color:  light-dark(var(--light-color),var(--dark-color));
-         transition: filter 0.1s ease; 
+        background-color: light-dark(var(--light-btn), var(--dark-btn));
+        color: light-dark(var(--light-color), var(--dark-color));
+        transition: filter 0.1s ease;
     }
 
     & .card-footer:hover {
         filter: brightness(85%);
-    
+
     }
 
     & .card-title {
@@ -39,16 +44,9 @@ body {
     background-attachment: fixed;
     z-index: 1;
 }
-    @media (prefers-color-scheme: dark) {
-        body {
-            background-image: url(/img/1Background.jpg); /* Applied when dark mode is preferred */
-           backdrop-filter:  grayscale(1) brightness(0.2);
-           /* filter: invert(); */
-        }
-    }
 
 header {
-    
+
     position: relative;
     top: 0;
     left: 0;
@@ -57,7 +55,7 @@ header {
     display: flex;
     margin-bottom: 12vh;
 
-   
+
 }
 
 header .logo {
@@ -78,7 +76,7 @@ header img {
     background-color: #E8E8E8;
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     position: absolute;
     margin-top: 2rem;
     margin-right: 12vw;
@@ -87,7 +85,7 @@ header img {
     border-radius: 10px;
     box-shadow: 0 4px 4px 0 rgba(236, 233, 233, 0.2);
 
-       
+
 }
 
 .icono {
@@ -103,48 +101,52 @@ input {
     outline: none;
     font-size: 1rem;
     background-color: #E8E8E8;
-    border-radius: 5px; 
-    
+    border-radius: 5px;
+
 
 }
+
 button {
-    background-color: light-dark(var(--light-btn),var(--dark-btn));
-     color: light-dark(var(--light-color),var(--dark-color));
-     border: none;
-     padding: 10px 28px; 
+    background-color: light-dark(var(--light-btn), var(--dark-btn));
+    color: light-dark(var(--light-color), var(--dark-color));
+    border: none;
+    padding: 10px 28px;
     margin-bottom: 15px;
-    border-radius: 5px; 
+    border-radius: 5px;
 
 
 }
+
 button:hover {
-  background-color: hsl(294, 93%, 21%);
-  color: white;
+    background-color: hsl(294, 93%, 21%);
+    color: white;
 }
 
 
-.Boton { 
-    background-color: #E8E8E8;;
+.Boton {
+    background-color: #E8E8E8;
+    ;
     padding: 10px 20px;
     position: absolute;
     border: 0;
     top: 0;
-    bottom:0;
+    bottom: 0;
     right: 0;
     margin: auto;
     border-radius: 0 5px 5px 0;
-    color: rgb(51, 50, 49);;
-    cursor: pointer; 
-    
-    
+    color: rgb(51, 50, 49);
+    ;
+    cursor: pointer;
 
-    
+
+
+
 }
 
 .Boton:hover {
     background-color: #f485dc;
-    padding-left: 30px;    
-    
+    padding-left: 30px;
+
 }
 
 
@@ -154,31 +156,31 @@ button:hover {
 @media only screen and (max-width: 768px) {
 
     header {
-    position: relative;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: 10rem 9%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    z-index: 1;
+        position: relative;
+        top: 0;
+        left: 0;
+        right: 0;
+        padding: 10rem 9%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: 1;
     }
 
     header .logo {
-      display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    
-    
-}
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+
+
+    }
 
     header img {
-    height: 13rem;
-    filter: brightness(0) invert(1) grayscale(1) contrast(100) drop-shadow(2px 2px 2px);
-    
+        height: 13rem;
+        filter: brightness(0) invert(1) grayscale(1) contrast(100) drop-shadow(2px 2px 2px);
+
 
     }
 
@@ -191,56 +193,60 @@ button:hover {
         margin-right: 0;
     }
 
-  .barra input { 
-    width: 350px;
-    padding: 10px;
-    padding-right: 10px;
-    border: 0;
-    outline: none;
-    font-size: 1rem;
+    .barra input {
+        width: 350px;
+        padding: 10px;
+        padding-right: 10px;
+        border: 0;
+        outline: none;
+        font-size: 1rem;
 
-  }
+    }
 
-  .heading {
-    position: relative;
-    left: -7%;
-    top: -30px;
-  }
+    .heading {
+        position: relative;
+        left: -7%;
+        top: -30px;
+    }
 
-.products .box-container .box {
-    position: relative;
-    text-align: center;
-    width: 0.5rem;
+    .products .box-container .box {
+        position: relative;
+        text-align: center;
+        width: 0.5rem;
+    }
+
+
+
+
+
 }
 
+@media only screen and (max-width: 360px) {
+    header img {
+        height: 50vw;
 
+    }
 
-
-    
-}
-
-@media only screen and (max-width: 360px) { 
-   header img { 
-    height: 50vw; 
-    
-}
     header {
-        
+
         padding-bottom: 5vh;
     }
-    .barra { 
+
+    .barra {
         border-radius: 8px;
         left: 0%;
         margin-top: 15vh;
         margin-bottom: 2px;
-       position: relative !important 
+        position: relative !important
     }
-    .barra, .barra input {
+
+    .barra,
+    .barra input {
         bottom: auto;
         width: 80vw;
-        
+
     }
-    
+
 }
 
 
@@ -249,7 +255,7 @@ button:hover {
 .heading {
     position: relative;
     text-align: center;
-    font-size:xx-large;
+    font-size: xx-large;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bolder;
     color: rgb(98, 19, 87);
@@ -257,49 +263,55 @@ button:hover {
 
 }
 
-.products .box-container { 
-    display: grid;  
-    grid-template-columns: repeat(4, auto); 
+.products .box-container {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
     grid-template-rows: auto;
-    gap: 20px;    
-    
-} 
+    gap: 20px;
+
+}
 
 
 .products .box-container .box {
-    display: grid;  
-    grid-template-columns: repeat(4, auto); 
-    border-radius: 0.5rem; 
-    border: 0.5rem solid transparent; 
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    border-radius: 0.5rem;
+    border: 0.5rem solid transparent;
     transform: translate(3%, -3%);
     width: 100%;
-    
+
 
 }
-    
 
-@media only screen and (min-width: 1224px) {.products .box-container .box  {grid-template-columns: repeat(4, 1fr);}
-                                             
+
+@media only screen and (min-width: 1224px) {
+    .products .box-container .box {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
 }
 
-@media only screen and (max-width: 600px) {.products .box-container .box {grid-template-columns:repeat(2, 1fr);}
-                                            
+@media only screen and (max-width: 600px) {
+    .products .box-container .box {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
 }
 
 .products .box-container .box .image {
 
-    
-    background-color: rgb(202, 89, 161); 
-   background-repeat: no-repeat;
-   background-size: cover;
-    
 
-    border-radius: 1.5rem; 
+    background-color: rgb(202, 89, 161);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+
+    border-radius: 1.5rem;
     border: 0.5rem transparent;
-    position:relative;
+    position: relative;
     text-align: center;
-    
-    
+
+
     padding-top: 1.5rem;
     padding-bottom: 0.3rem;
     margin-right: 15px;
@@ -314,38 +326,38 @@ button:hover {
 
 .products .box-container .box .content {
     padding: 2rem;
-    
+
 }
 
-.products .box-container .box .image p { 
+.products .box-container .box .image p {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     padding: 1rem;
-    font-size: 1rem;    
+    font-size: 1rem;
     font-weight: bolder;
     text-align: left;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: rgb(255, 255, 255);
 
-    
+
 }
 
 .products .box-container .box .image p2 {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     text-align: right;
-    font-weight:bold;
+    font-weight: bold;
     margin-top: -20px;
     font-size: 0.8rem;
-     color: rgb(254, 222, 238);
+    color: rgb(254, 222, 238);
     padding: 0.4rem;
-    
-    
 
-    
+
+
+
 }
 
-.products .box-container .box .image .price { 
+.products .box-container .box .image .price {
     display: flex;
     flex-direction: column;
     font-size: 0.8rem;
@@ -353,35 +365,35 @@ button:hover {
     text-align: left;
     padding: 0.5rem;
     margin-top: -30px;
-     color: rgb(254, 222, 238);
-    
+    color: rgb(254, 222, 238);
+
 }
 
- .products .box-container .box .image .price .precio {
+.products .box-container .box .image .price .precio {
 
     font-size: 0.8rem;
     font-weight: bolder;
     text-align: left;
     position: relative;
     color: rgb(255, 255, 255);
-    
 
-   
+
+
 }
 
 
 
 
-.products .box-container .box .image p3 { 
+.products .box-container .box .image p3 {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     font-size: 0.8rem;
     font-weight: lighter;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: rgb(254, 222, 238);
     padding: 0.3rem;
-    
-    
+
+
 }
 
 a {
@@ -395,9 +407,9 @@ a:hover {
 
 
 .nav-item .nav-link {
-    color: rgb(192, 27, 170); 
-   
-   
+    color: rgb(192, 27, 170);
+
+
 }
 
 .nav-link.active {
@@ -406,8 +418,8 @@ a:hover {
 
 
 .nav-item:hover {
-    padding-right: 5px; 
-    background-color: rgb(255, 255, 255); 
+    padding-right: 5px;
+    background-color: rgb(255, 255, 255);
     transition: 0.3s;
 }
 
@@ -419,8 +431,8 @@ a:hover {
     padding: 10px 0;
     font-weight: bold;
     text-align: center;
-    
-    
+
+
 }
 
 .dropdown-item:hover {
@@ -431,51 +443,45 @@ a:hover {
 .dropdown-toggle {
     font-weight: bold;
     text-align: center;
-    
+
 }
 
 
 
 .dropdown-toggle::after {
-    text-align: center;  
+    text-align: center;
 }
 
 
 @media (max-width: 990px) {
 
 
-.navbar-toggler  {
- position: absolute;
- top: 0.2rem;
- right: 0.2rem;
- 
+    .navbar-toggler {
+        position: absolute;
+        top: 0.2rem;
+        right: 0.2rem;
+
+    }
+
+    .navbar-collapse {
+        position: absolute;
+        top: 2.8rem;
+        right: -2rem;
+        direction: rtl;
+    }
+
+    .nav-link {
+        font-size: 15px;
+
+    }
+
+    .dropdown-item {
+        font-size: 15px;
+        background-color: rgb(255, 255, 255);
+        z-index: 4;
+
+    }
+
+
+
 }
-
-.navbar-collapse {
-    position: absolute;
-    top: 2.8rem;
-     right: -2rem;
-     direction: rtl;
-}
-
-.nav-link {
-   font-size: 15px;
-   
-}
-
-.dropdown-item {
-    font-size: 15px;
-    background-color: rgb(255, 255, 255);
-    z-index: 4;
-    
-}
-
-
-
-}
-
-
-
-
-
-
