--- a/css/colors.css
+++ b/css/colors.css
@@ -16,7 +16,9 @@
    
 }
 
-:root:has(#themeSwitch) {
+        /* Todo esto es darkmode */
+
+:root:has(option[value='dark']:checked) {
      color-scheme: dark;   
      & .form-check-input:checked {
     background-color: var(--light-btn);
@@ -24,15 +26,41 @@
     
      
     } 
-    & .bi-moon-fill{
-        content: "\f5a1";
-    }
+
+    & body {
+            background-image: url(/img/1Background.jpg); /* Applied when dark mode is preferred */
+            backdrop-filter:  grayscale(1) brightness(0.2);
+           /* filter: invert(); */
+        }
 }
 
-:root:has(#themeSwitch:checked) {
+:root:has(option[value='light']:checked){
      color-scheme: light;    
      & .form-check-input:checked {
     background-color: var(--light-btn);
     border-color: var(--light-btn);
     } 
+
+    & body {
+        backdrop-filter:  none;
+    
+        }
 }
+
+body {
+
+    background-image: url(/img/1Background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    z-index: 1;
+}    
+
+@media (prefers-color-scheme: dark) {
+        body {
+            background-image: url(/img/1Background.jpg); /* Applied when dark mode is preferred */
+            backdrop-filter:  grayscale(1) brightness(0.2);
+           /* filter: invert(); */
+        }
+    } 
