--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ nav a {
   padding: 5em inherit;
   margin-bottom: 0;
   background-color: #53c0fb;
-  background: url("../img/cover_back.1.png");
+  background: url("../img/cover_back.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -58,7 +58,7 @@ nav a {
 
 .jumbotron .container {
   max-width: 40rem;
-  background-color: rgba(20, 211, 45, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
   text-shadow: 1px 1px 2px grey;
 }
@@ -188,11 +188,19 @@ a.custom-card:hover {
 .checked {
   color: orange;
 }
-body {
-    background-image: url(/img/1Background.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    z-index: 1;
+.login-card {
+  background-color: rgba(255, 182, 193, 0.9); /* Rosa clarito */
+  border-radius: 15px;
+}
+
+/* Botón rosa intenso */
+.btn-rosa {
+  background-color: #e75480; /* Rosa intenso */
+  color: white;
+  border: none;
+}
+
+.btn-rosa:hover {
+  background-color: hsl(339, 67%, 52%); /* Más oscuro al pasar el mouse */
+  color: white;
 }
