--- a/css/stylesproduct-info.css
+++ b/css/stylesproduct-info.css
@@ -6,6 +6,7 @@
     }
 
  .mb-5 {
+    
      font-family: "Playfair Display", serif;
      font-optical-sizing: auto;
      font-weight: 300;
@@ -19,3 +20,9 @@
 
 
  }
+
+ .mt-3 {
+    margin-bottom: 1rem;
+
+ }
+
