--- a/css/stylesproduct-info.css
+++ b/css/stylesproduct-info.css
@@ -5,8 +5,13 @@
     box-shadow: 0 6px 6px 0 rgba(172, 57, 115, 0.567);
     }
 
+    .carousel-inner {
+        border-radius: 1rem;
+        box-shadow: 0 4px 4px 0 rgba(161, 88, 125, 0.567);
+    }
+
  .mb-5 {
-    
+
      font-family: "Playfair Display", serif;
      font-optical-sizing: auto;
      font-weight: 300;
@@ -24,5 +29,9 @@
  .mt-3 {
     margin-bottom: 1rem;
 
+ }
+
+ .precio .ms-3 .fw-normal  {
+    margin-top: 1rem !important;
  }
 
