--- a/css/stylesproduct-info.css
+++ b/css/stylesproduct-info.css
@@ -8,6 +8,8 @@
     .carousel-inner {
         border-radius: 1rem;
         box-shadow: 0 4px 4px 0 rgba(161, 88, 125, 0.567);
+        top: 1rem;
+        left: 0.5rem;
     }
 
  .mb-5 {
@@ -16,6 +18,9 @@
      font-optical-sizing: auto;
      font-weight: 300;
      font-style: normal;
+     position: relative;
+     left: 2rem;
+     margin-top: -2rem;
  }
 
  .mt-3, .ms-3 {
@@ -27,17 +32,26 @@
  }
 
  .mt-3 {
-    margin-bottom: 1rem;
-
+   position: relative;
+   margin-bottom: 1.9rem !important;
+   
  }
 
  .cat {
-    margin-top: -8.5rem !important;
+    margin-top: -7.5rem;
     text-align: right;
  }
 
- .cat2 {
-    margin-bottom: -1rem !important;
-    text-align:right
+ .vendidos {
+   position: relative;
+   text-align: right;
+   bottom: -29rem;
  }
+
+ .precio-valor {
+   font-size: 18px;
+   position: relative;
+   top: 3rem;
+ }
+
 
